--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ pluggy==1.5.0
 pydantic==2.11.4
 pydantic_core==2.33.2
 pytest==8.3.5
+pytest-mock==3.14.1
 setuptools==80.4.0
 typing-inspection==0.4.0
 typing_extensions==4.13.2
