--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,21 @@
 annotated-types==0.7.0
+cfgv==3.4.0
+distlib==0.3.9
+filelock==3.18.0
+identify==2.6.12
 iniconfig==2.1.0
+nodeenv==1.9.1
 packaging==25.0
+platformdirs==4.3.8
 pluggy==1.5.0
+pre_commit==4.2.0
 pydantic==2.11.4
 pydantic_core==2.33.2
+pyhumps==3.8.0
 pytest==8.3.5
 pytest-mock==3.14.1
+PyYAML==6.0.2
 setuptools==80.4.0
 typing-inspection==0.4.0
 typing_extensions==4.13.2
+virtualenv==20.31.2
